src/styles/keymap.css
/* Chrysalis -- Kaleidoscope Command Center
 * Copyright (C) 2018, 2019  Keyboardio, Inc.
 *
 * This program is free software: you can redistribute it and/or modify it under
 * the terms of the GNU General Public License as published by the Free Software
 * Foundation, version 3.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

button {
  margin-left: 0.5em;
  margin-right: 0.5em;
}

.layer {
  font-family: "Source Code Pro", monospace;
  font-size: 8px;
  font-weight: 700;
  min-width: 550px;
  min-height: 280px;
  max-width: calc(100vw - 360px);
}

.short-legend {
  font-size: 16px;
}

.extra-key {
  font-size: 8px;
}

.key:hover {
  cursor: pointer;
}

.dim {
  color: #888;
}

.layer-selection {
  display: flex;
  margin-bottom: 1em;
  padding-bottom: 0.5em;
  border-bottom: 1px solid black;
}

.layer-selection > label {
  margin-top: auto;
  margin-bottom: auto;
}

.layer-selection > div {
  width: 8em;
  margin-left: 1em;
  margin-right: 1em;
}

.keylist {
  height: 384px;
  overflow-y: scroll;
}

.select-keycode input {
  line-height: 1.5;
  font-size: 18px;
  height: auto;
  padding-left: 20px;
  margin-bottom: 0;
  width: -webkit-fill-available;
}

.select-keycode ul {
  margin: 0;
}

.select-keycode ul li {
  list-style: none;
  border: 1px solid #ccc;
  margin-top: -1px;
  line-height: 2;
  padding: 5px 20px;
  background: #f8f8f8;
}

.select-keycode ul li:hover {
  cursor: pointer;
  background: #ef5022;
}

.select-keycode ul li em {
  color: #888;
}

.select-keycode ul li.highlight {
  font-weight: bold;
}

